# owl2_rs

./: .gitignore  CLEAN_BASELINE.md  COMPLETION_SUMMARY.md  CURRENT_STATUS_UPDATE.md  Cargo.toml  DETAILED_RL_IMPLEMENTATION_PLAN.md  DEVELOPMENT_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION.md  ENHANCEMENTS_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FIX_PARSING_ISSUES_PLAN.md  GEMINI.md  INCREMENTAL_REASONING_SUMMARY.md  PERFORMANCE_IMPROVEMENT_PLAN.md  PHASE2_SUMMARY.md  PROFILE_IMPLEMENTATION_SUMMARY.md  PROFILE_OPTIMIZATIONS_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  Plan.md  Project.md  QWEN.md  README.md  RL_PROFILE_IMPLEMENTATION_PLAN.md  SUCCESS_SUMMARY.md  SUMMARY.md  WORLD_CLASS_ROADMAP.md  book.toml
benches/: large_benchmark.rs  reasoner_benchmark.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  OWL2_PROFILES.md  PERFORMANCE.md  README.md  SUMMARY.md  TESTING.md  TUTORIALS.md
examples/: Cargo.toml  basic_reasoning.rs  classification_hierarchy_test.rs  classification_test.rs  comprehensive_reasoning.rs  gs1_epcis_integration.rs  owl2_conformance_test.rs  simple_ontology.ofn  test_runner_example.rs  test_runner_simple.rs  uht_milk_traceability.rs
scripts/: build-docs.sh  build-wasm.sh
src/: api.rs  api_test.rs  cache.rs  grammar.pest  incremental.rs  lib.rs  missing_class_expressions.rs  owl2_profile.rs  parser.rs  rdf.rs  reasoner.rs  sparql.rs  test_runner.rs  wasm.rs
test_cases/: epcis_test.ofn  gs1_test.ofn  sample_test.ofn  uht_milk_supplychain.ofn
tests/: comprehensive_profile_tests.rs  comprehensive_test.rs  gs1_epcis_tests.rs  integration_tests.rs  (+5 more)
(+6 files in other folders)
