[package]
name = "owl2_rs"
version = "0.1.0"
edition = "2024"
authors = ["owl2_rs Development Team"]
description = "A Rust library for the Web Ontology Language (OWL 2)"
license = "MIT"
repository = "https://github.com/your-username/owl2_rs"
keywords = ["owl", "ontology", "reasoner", "parser", "semantic-web"]
categories = ["parser-implementations", "science"]
resolver = "2"

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
thiserror = "1.0"
rayon = "1.7"
oxrdfio = "0.2.0-beta.3"
oxrdf = "0.3.0-beta.2"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Dependencies only for non-WASM targets

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific dependencies
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reasoner_benchmark"
harness = false
